@@ -7,6 +7,7 @@ AC_CONFIG_SRCDIR([usbprog/usbprog.h])
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_HEADERS([config.h])
 AC_CANONICAL_SYSTEM
+AC_PATH_PROG(POD2MAN, pod2man)
 AM_INIT_AUTOMAKE
 
 
